# second-brain-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  pyproject.toml
eval/: eval_logger.py
eval/logs/: rag_eval.json
eval_data/: golden_set.json
evaluation/: eval_rag.py  generate_eval_data.py
src/: app.py  engine.py
src/database/: vector_store.py
src/loaders/: base.py  implementations.py
