[project]
name = "second-brain-ai"
version = "0.1.0"
description = "This is a RAG to get answers from a local knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "deepeval>=3.9.7",
    "gradio>=6.11.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
]
